# mesh_visualizer

./: CMakeLists.txt  README.md  mesh_visualizer.cpp  output_mesh.ply  output_mesh_slink.ply
